force-app/main/default/objects/FSM_MeasuringDocument__c/FSM_MeasuringDocument__c.object-meta.xml
<CustomObject>
    <description>SFI-669</description>
    <label>Measuring Document</label>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>Measuring Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measuring Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>