force-app/main/default/objects/FSM_MeasuringDocument__c/fields/FSM_AvailableOffline__c.field-meta.xml
<CustomField>
    <fullName>FSM_AvailableOffline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in briefcases to prime a measuring document record. If checked, this record will be cached for offline use. Latest 3 records are cached for offline use. 
Created as part of SFS-4870</description>
    <label>Available Offline</label>
    <type>Checkbox</type>
</CustomField>