force-app/main/default/objects/FSM_MeasuringDocument__c/fields/FSM_CodeGroup__c.field-meta.xml
<CustomField>
    <fullName>FSM_CodeGroup__c</fullName>
    <description>SFS-3011</description>
    <label>Code Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>