force-app/main/default/objects/FSM_MeasuringDocument__c/fields/FSM_Comments__c.field-meta.xml
<CustomField>
    <fullName>FSM_Comments__c</fullName>
    <description>SFI-669
label updated as a part of SFS-3011</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>