force-app/main/default/objects/FSM_MeasuringDocument__c/fields/FSM_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_DateTime__c</fullName>
    <description>SFI-669</description>
    <label>Date And Time</label>
    <type>DateTime</type>
</CustomField>