force-app/main/default/objects/FSM_MeasuringDocument__c/fields/FSM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalId__c</fullName>
    <description>SFI-669</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>