force-app/main/default/objects/FSM_MeasuringDocument__c/fields/FSM_MeasuringPointReading__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeasuringPointReading__c</fullName>
    <description>SFI-669</description>
    <label>Measuring Point Reading</label>
    <referenceTo>FSM_MeasuringPoint__c</referenceTo>
    <relationshipLabel>Measuring Documents</relationshipLabel>
    <relationshipName>Measuring_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>