force-app/main/default/objects/FSM_MeasuringDocument__c/fields/FSM_Mpvalcode__c.field-meta.xml
<CustomField>
    <fullName>FSM_Mpvalcode__c</fullName>
    <description>List of Code in SAP. SFI-669
API name updated SFI-1559</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Skip</fullName>
            </value>
            <value>
                <fullName>NDNE</fullName>
                <label>Not Done</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>