force-app/main/default/objects/FSM_MeasuringDocument__c/fields/FSM_OperationNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OperationNumber__c</fullName>
    <description>Created as part of SFS-3011</description>
    <formula>FSM_WorkOrder__r.FSM_OperationNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operation Number</label>
    <type>Text</type>
</CustomField>