force-app/main/default/objects/FSM_MeasuringDocument__c/fields/FSM_Reading__c.field-meta.xml
<CustomField>
    <fullName>FSM_Reading__c</fullName>
    <description>SFI-669</description>
    <label>Current Reading</label>
    <length>80</length>
    <type>Text</type>
</CustomField>