force-app/main/default/objects/FSM_MeasuringDocument__c/fields/FSM_ReadingTakenBy__c.field-meta.xml
<CustomField>
    <fullName>FSM_ReadingTakenBy__c</fullName>
    <description>SFI-669</description>
    <label>Reading Taken By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>