force-app/main/default/objects/FSM_MeasuringDocument__c/fields/FSM_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFI-1451</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Measuring Documents</relationshipLabel>
    <relationshipName>Measuring_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>